Add menu styles

--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ Description:  A child theme for the Flexline theme.
 Template:     flexline
 Version:      1.0.0
 Text Domain:  web4sl
+ __        __   _     _  _    ____  _     
+ \ \      / /__| |__ | || |  / ___|| |    
+  \ \ /\ / / _ \ '_ \| || |_ \___ \| |    
+   \ V  V /  __/ |_) |__   _| ___) | |___ 
+    \_/\_/ \___|_.__/   |_|  |____/|_____|
+
 */
 
 /* Custom CSS can go below this line. */
